aligned and positioned site container correctly. global margin required to compensate for side nav

--- a/more_soup_site/src/app/app.component.css
+++ b/more_soup_site/src/app/app.component.css
@@ -95,15 +95,15 @@
     position: absolute;
     display: block;
     top: 0;
-    height: 110px;
+    height: 90px;
     width: 100%;
     background-color: #f2f2f2;
-    -webkit-box-shadow: 0px 6px 45px -3px rgba(0,0,0,0.76);
-    -moz-box-shadow: 0px 6px 45px -3px rgba(0,0,0,0.76);
-    box-shadow: 0px 6px 45px -3px rgba(0,0,0,0.76);
+    -webkit-box-shadow: 0px 6px 12px -2px rgba(0,0,0,0.16);
+    -moz-box-shadow: 0px 6px 12px -2px rgba(0,0,0,0.16);
+    box-shadow: 0px 6px 12px -2px rgba(0,0,0,0.16);
     z-index: 100;
     transition: all 0.5s ease-in-out;
-    padding: 35px 0 20px 40px;
+    padding: 30px 0 20px 50px;
   }
   /* hide bar when menu is open */
   .top-bar.hide-bar {
@@ -179,9 +179,17 @@
   }
 
   .top-bar img {
-    height: 40px;
+    height: 25px;
+  }
 
+  .container {
+    margin-left: 200px;
+    padding-right: 100px;
+    padding-top: 70px;
+  }
 
+  .container h1 {
+    font-weight: normal;
   }
 
 
